[MOD] Reduce image sizes to improve speed, make images more responsive based on device screen width, animate message confirmation and translate it's message to Spanish

--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -119,8 +119,8 @@
     <div class="banner-image"></div>
     <div class="banner-caption">
       <div class="container">
-        <div class="space clearfix"></div>
-        <div class="space clearfix"></div>
+        <div class="space clearfix hidden-xs"></div>
+        <div class="space clearfix hidden-xs"></div>
         <div class="row">
           <div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
             <h1 class="text-center">Cloud <span>experts</span></h1>
@@ -144,11 +144,11 @@
         <div class="col-md-12">
           <h1 id="about" class="title text-center">About <span class="company-name">devop<span class="equis">X</span></span></h1>
           <p class="lead text-center">We're the team of experts your company needs to take it to the next level.</p>
-          <div class="space"></div>
+          <div class="space clearfix"></div>
           <div class="row">
-            <div class="col-md-6">
-              <img src="/assets/themes/devopx/images/section-image-1.jpg" class="img-rounded" alt="">
-              <div class="space"></div>
+            <div class="col-md-6 col-xs-12">
+              <img src="/assets/themes/devopx/images/NFFFFFF-0.png" class="section-1 img-rounded" alt="devopX team">
+              <div class="space clearfix"></div>
             </div>
             <div class="col-md-6">
               <p>Our main goal is to make infrastructure simple, reliable and scalable. In order to do so we focus on your technology needs and design a custom made plan to achieve your business goals.</p>
@@ -362,25 +362,25 @@
               <ul class="nav nav-justified" id="nav-tabs" role="tablist">
                 <li role="presentation" class="">
                   <a href="#julio-fitipaldo" aria-controls="julio-fitipaldo" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="/assets/themes/devopx/images/customers/julio-fitipaldo_thumb.jpg" />
+                    <img class="img-circle julio-fitipaldo" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="">
                   <a href="#matias-reina" aria-controls="matias-reina" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="/assets/themes/devopx/images/customers/matias-reina_thumb.jpg" />
+                    <img class="img-circle matias-reina" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="active">
                   <a href="#portales-del-uruguay" aria-controls="portales-del-uruguay" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="/assets/themes/devopx/images/customers/portales-del-uruguay_thumb.jpg" />
+                    <img class="img-circle portales-del-uruguay" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="">
                   <a href="#wafer" aria-controls="wafer" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/waferbaby/128.jpg" />
+                    <img class="img-circle wafer" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
@@ -545,9 +545,6 @@
 
 <!-- Isotope javascript -->
 <script type="text/javascript" src="/assets/themes/devopx/plugins/isotope/isotope.pkgd.min.js"></script>
-
-<!-- Backstretch javascript -->
-<script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.backstretch.min.js"></script>
 
 <!-- Appear javascript -->
 <script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.appear.js"></script>
