--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -119,8 +119,8 @@
     <div class="banner-image"></div>
     <div class="banner-caption">
       <div class="container">
-        <div class="space clearfix"></div>
-        <div class="space clearfix"></div>
+        <div class="space clearfix hidden-xs"></div>
+        <div class="space clearfix hidden-xs"></div>
         <div class="row">
           <div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
             <h1 class="text-center"><span>Expertos</span> en cloud</h1>
@@ -144,11 +144,11 @@
         <div class="col-md-12">
           <h1 id="about" class="title text-center">Sobre <span class="company-name">devop<span class="equis">X</span></span></h1>
           <p class="lead text-center">Somos el equipo de expertos que tu compañía necesita para dar el gran salto.</p>
-          <div class="space"></div>
+          <div class="space clearfix"></div>
           <div class="row">
-            <div class="col-md-6">
-              <img src="/assets/themes/devopx/images/section-image-1.jpg" class="img-rounded" alt="">
-              <div class="space"></div>
+            <div class="col-md-6 col-xs-12">
+              <img src="/assets/themes/devopx/images/NFFFFFF-0.png" class="section-1 img-rounded" alt="devopX team">
+              <div class="space clearfix"></div>
             </div>
             <div class="col-md-6">
               <p>Nuestro principal objetivo es hacer de la infraestructura algo simple, confiable y escalable. Para poder lograrlo, nos enfocamos en las necesidades tecnológicas de tu compañía y diseñamos un plan a medida para alcanzar las metas de tu negocio.</p>
@@ -362,25 +362,25 @@
               <ul class="nav nav-justified" id="nav-tabs" role="tablist">
                 <li role="presentation" class="">
                   <a href="#julio-fitipaldo" aria-controls="julio-fitipaldo" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="/assets/themes/devopx/images/customers/julio-fitipaldo_thumb.jpg" />
+                    <img class="img-circle julio-fitipaldo" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="">
                   <a href="#matias-reina" aria-controls="matias-reina" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="/assets/themes/devopx/images/customers/matias-reina_thumb.jpg" />
+                    <img class="img-circle matias-reina" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="active">
                   <a href="#portales-del-uruguay" aria-controls="portales-del-uruguay" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="/assets/themes/devopx/images/customers/portales-del-uruguay_thumb.jpg" />
+                    <img class="img-circle portales-del-uruguay" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="">
                   <a href="#wafer" aria-controls="wafer" role="tab" data-toggle="tab">
-                    <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/waferbaby/128.jpg" />
+                    <img class="img-circle wafer" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
@@ -482,8 +482,8 @@
         </div>
         <div class="col-sm-6">
           <div class="footer-content">
-            <div class="alert alert-success fade in" id="successFormSubmit" role="alert" style="display: none;"><i class="fa fa-check"></i> Your message was sent successfully. We'll get back to you right away!</div>
-            <div class="alert alert-danger fade in" id="errorFormSubmit" role="alert" style="display: none;"><i class="fa fa-exclamation-circle"></i> We couldn't get your message. Please try again.</div>
+            <div class="alert alert-success fade in" id="successFormSubmit" role="alert" style="display: none;"><i class="fa fa-check"></i> Su mensaje ha sido enviado satisfactoriamente. Nos pondremos en contacto con usted lo antes posible.</div>
+            <div class="alert alert-danger fade in" id="errorFormSubmit" role="alert" style="display: none;"><i class="fa fa-exclamation-circle"></i> No hemos podido recibir su mensaje. Por favor intente nuevamente.</div>
             <form role="form" id="footer-form">
               <div class="form-group has-feedback">
                 <label class="sr-only" for="name">Nombre</label>
@@ -545,9 +545,6 @@
 
 <!-- Isotope javascript -->
 <script type="text/javascript" src="/assets/themes/devopx/plugins/isotope/isotope.pkgd.min.js"></script>
-
-<!-- Backstretch javascript -->
-<script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.backstretch.min.js"></script>
 
 <!-- Appear javascript -->
 <script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.appear.js"></script>
