--- a/assets/themes/devopx/css/custom.css
+++ b/assets/themes/devopx/css/custom.css
@@ -26,7 +26,6 @@ File Description: Place here your custom CSS styles
 .nav.nav-justified > li > a > img { box-shadow: 0 0 0 5px #55acee; }
 .nav.nav-justified > li > a > img {
   max-width: 100%;
-  opacity: .3;
   -webkit-transform: scale(.8,.8);
   transform: scale(.8,.8);
   -webkit-transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -113,5 +112,389 @@ body:before {
     background-color: #339BEB;
     height: 1px;
     margin: 0px 15px;
+  }
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px){
+  .banner-image {
+    background-image: url('/assets/themes/devopx/images/banner_320.jpg');
+    background-size: cover;
+  }
+
+  .section-1 {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/section-image-1_small.jpg') no-repeat;
+    width: 345px;
+    height: 232px;
+    padding-left: 345px;
+  }
+
+  .bg-image-1 {
+    background: url('/assets/themes/devopx/images/bg-image-1_320.jpg');
+    background-size: cover;
+  }
+
+  .bg-image-2 {
+    background: url('/assets/themes/devopx/images/bg-image-2_320.jpg');
+    background-size: cover;
+  }
+
+  .julio-fitipaldo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_45.jpg') no-repeat;
+    width: 45px;
+    height: 45px;
+  }
+
+  .matias-reina {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/matias-reina_45.jpg') no-repeat;
+    width: 45px;
+    height: 45px;
+  }
+
+  .portales-del-uruguay {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_45.jpg') no-repeat;
+    width: 45px;
+    height: 45px;
+  }
+
+  .wafer {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/test_45.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px){
+  .banner-image {
+    background-image: url('/assets/themes/devopx/images/banner_480.jpg');
+    background-size: cover;
+  }
+
+  .section-1 {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/section-image-1_small.jpg') no-repeat;
+    width: 345px;
+    height: 232px;
+    padding-left: 345px;
+  }
+
+  .bg-image-1 {
+    background: url('/assets/themes/devopx/images/bg-image-1_480.jpg');
+    background-size: cover;
+  }
+
+  .bg-image-2 {
+    background: url('/assets/themes/devopx/images/bg-image-2_480.jpg');
+    background-size: cover;
+  }
+
+  .julio-fitipaldo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_45.jpg') no-repeat;
+    width: 45px;
+    height: 45px;
+  }
+
+  .matias-reina {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/matias-reina_45.jpg') no-repeat;
+    width: 45px;
+    height: 45px;
+  }
+
+  .portales-del-uruguay {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_45.jpg') no-repeat;
+    width: 45px;
+    height: 45px;
+  }
+
+  .wafer {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/test_45.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px){
+  .banner-image {
+    background-image: url('/assets/themes/devopx/images/banner_768.jpg');
+    background-size: cover;
+  }
+
+  .section-1 {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/section-image-1_small.jpg') no-repeat;
+    width: 345px;
+    height: 232px;
+    padding-left: 345px;
+  }
+
+  .bg-image-1 {
+    background: url('/assets/themes/devopx/images/bg-image-1_768.jpg');
+    background-size: cover;
+  }
+
+  .bg-image-2 {
+    background: url('/assets/themes/devopx/images/bg-image-2_768.jpg');
+    background-size: cover;
+  }
+
+  .julio-fitipaldo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .matias-reina {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/matias-reina_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .portales-del-uruguay {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .wafer {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/test_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px){
+  .banner-image {
+    background: url('/assets/themes/devopx/images/banner_992.jpg');
+    background-size: cover;
+  }
+
+  .section-1 {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/section-image-1_small.jpg') no-repeat;
+    width: 345px;
+    height: 232px;
+    padding-left: 345px;
+  }
+
+  .bg-image-1 {
+    background: url('/assets/themes/devopx/images/bg-image-1_992.jpg');
+    background-size: cover;
+  }
+
+  .bg-image-2 {
+    background: url('/assets/themes/devopx/images/bg-image-2_992.jpg');
+    background-size: cover;
+  }
+
+  .julio-fitipaldo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .matias-reina {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/matias-reina_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .portales-del-uruguay {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .wafer {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/test_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px){
+  .banner-image {
+    background: url('/assets/themes/devopx/images/banner_1200.jpg');
+    background-size: cover;
+  }
+
+  .section-1 {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/section-image-1_large.jpg') no-repeat;
+    width: 555px;
+    height: 374px;
+    padding-left: 555px;
+  }
+
+  .bg-image-1 {
+    background: url('/assets/themes/devopx/images/bg-image-1_1200.jpg');
+    background-size: cover;
+  }
+
+  .bg-image-2 {
+    background: url('/assets/themes/devopx/images/bg-image-2_1200.jpg');
+    background-size: cover;
+  }
+
+  .julio-fitipaldo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .matias-reina {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/matias-reina_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .portales-del-uruguay {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .wafer {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/test_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1440px){
+  .banner-image {
+    background: url('/assets/themes/devopx/images/banner.jpg');
+    background-size: cover;
+  }
+
+  .section-1 {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/section-image-1_large.jpg') no-repeat;
+    width: 555px;
+    height: 374px;
+    padding-left: 555px;
+  }
+
+  .bg-image-1 {
+  	background: url('/assets/themes/devopx/images/bg-image-1.jpg');
+    background-size: cover;
+  }
+
+  .bg-image-2 {
+  	background: url('/assets/themes/devopx/images/bg-image-2.jpg');
+    background-size: cover;
+  }
+
+  .julio-fitipaldo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .matias-reina {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/matias-reina_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .portales-del-uruguay {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
+  }
+
+  .wafer {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('/assets/themes/devopx/images/customers/test_150.jpg') no-repeat;
+    width: 150px;
+    height: 150px;
   }
 }
