--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -21,7 +21,7 @@
   <link href='http://fonts.googleapis.com/css?family=Expletus+Sans:400,500' rel='stylesheet' type='text/css'>
 
   <!-- Bootstrap core CSS -->
-  <link href="/assets/themes/devopx/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/assets/themes/devopx/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome CSS -->
   <link href="/assets/themes/devopx/fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -30,10 +30,10 @@
   <link href="/assets/themes/devopx/css/animations.css" rel="stylesheet">
 
   <!-- Worthy core CSS file -->
-  <link href="/assets/themes/devopx/css/style.css" rel="stylesheet">
+  <link href="/assets/themes/devopx/css/style.min.css" rel="stylesheet">
 
   <!-- Custom css -->
-  <link href="/assets/themes/devopx/css/custom.css" rel="stylesheet">
+  <link href="/assets/themes/devopx/css/custom.min.css" rel="stylesheet">
 </head>
 
 <body class="no-trans">
@@ -147,7 +147,7 @@
           <div class="space clearfix"></div>
           <div class="row">
             <div class="col-md-6 col-xs-12">
-              <img src="/assets/themes/devopx/images/NFFFFFF-0.png" class="section-1 img-rounded" alt="devopX team">
+              <img src="/assets/themes/devopx/images/NFFFFFF-0.png" width="1" height="1" class="section-1 img-rounded" alt="devopX team">
               <div class="space clearfix"></div>
             </div>
             <div class="col-md-6">
@@ -362,25 +362,25 @@
               <ul class="nav nav-justified" id="nav-tabs" role="tablist">
                 <li role="presentation" class="">
                   <a href="#julio-fitipaldo" aria-controls="julio-fitipaldo" role="tab" data-toggle="tab">
-                    <img class="img-circle julio-fitipaldo" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                    <img class="img-circle julio-fitipaldo" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="">
                   <a href="#matias-reina" aria-controls="matias-reina" role="tab" data-toggle="tab">
-                    <img class="img-circle matias-reina" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                    <img class="img-circle matias-reina" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="active">
                   <a href="#portales-del-uruguay" aria-controls="portales-del-uruguay" role="tab" data-toggle="tab">
-                    <img class="img-circle portales-del-uruguay" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                    <img class="img-circle portales-del-uruguay" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="">
                   <a href="#wafer" aria-controls="wafer" role="tab" data-toggle="tab">
-                    <img class="img-circle wafer" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                    <img class="img-circle wafer" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
@@ -543,17 +543,14 @@
 <!-- Modernizr javascript -->
 <script type="text/javascript" src="/assets/themes/devopx/plugins/modernizr.js"></script>
 
-<!-- Isotope javascript -->
-<script type="text/javascript" src="/assets/themes/devopx/plugins/isotope/isotope.pkgd.min.js"></script>
-
 <!-- Appear javascript -->
-<script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.appear.js"></script>
+<script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.appear.min.js" async></script>
 
 <!-- Initialization of Plugins -->
-<script type="text/javascript" src="/assets/themes/devopx/js/template.js"></script>
+<script type="text/javascript" src="/assets/themes/devopx/js/template.min.js" async></script>
 
 <!-- Custom Scripts -->
-<script type="text/javascript" src="/assets/themes/devopx/js/custom.js"></script>
+<script type="text/javascript" src="/assets/themes/devopx/js/custom.min.js"></script>
 
 </body>
 </html>
