--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -16,9 +16,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
   <!-- Web Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Cuprum:400,500' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Expletus+Sans:400,500' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cuprum:400,500|Expletus+Sans:400,500|Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
   <!-- Bootstrap core CSS -->
   <link href="/assets/themes/devopx/bootstrap/css/bootstrap.min.css" rel="stylesheet">
