[MOD] Update clients testimonials

--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -376,12 +376,6 @@
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
-                <li role="presentation" class="">
-                  <a href="#wafer" aria-controls="wafer" role="tab" data-toggle="tab">
-                    <img class="img-circle wafer" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
-                    <span class="quote"><i class="fa fa-quote-left"></i></span>
-                  </a>
-                </li>
               </ul>
             </div>
             <div class="col-xs-8 col-sm-12">
@@ -389,7 +383,7 @@
               <div class="tab-content" id="tabs-collapse">
                 <div role="tabpanel" class="tab-pane fade" id="julio-fitipaldo">
                   <div class="tab-inner">
-                    <p class="lead">Tienen un fuerte equipo técnico que respalda sus actividades, generando proyectos de alta calidad.</p>
+                    <p class="lead">Tienen un fuerte equipo técnico que respalda sus actividades, <strong>generando proyectos de alta calidad</strong>.</p>
                     <hr>
                     <p><strong class="text-uppercase">Julio Fitipaldo</strong></p>
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://nublit.com">Nublit</a></p>
@@ -398,7 +392,7 @@
 
                 <div role="tabpanel" class="tab-pane fade" id="matias-reina">
                   <div class="tab-inner">
-                    <p class="lead">Lorem ipsum.<br/> Lorem ipsum.</p>
+                    <p class="lead">Excelente soporte brindado por <strong>verdaderos expertos en cloud</strong>.</p>
                     <hr>
                     <p><strong class="text-uppercase">Matías Reina</strong></p>
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://www.abstracta.us">Abstracta</a></p>
@@ -407,19 +401,10 @@
 
                 <div role="tabpanel" class="tab-pane fade in active" id="portales-del-uruguay">
                   <div class="tab-inner">
-                    <p class="lead">devopX nos ayudó a reducir nuestra factura de servidores en un 60% y aumento nuestro uptime durante periodos de alta demanda.</p>
+                    <p class="lead">devopX nos ayudó a <strong>reducir nuestra factura de servidores en un 60%</strong> y aumento nuestro uptime durante periodos de alta demanda.</p>
                     <hr>
                     <p><strong class="text-uppercase">Nicolás Bottaioli</strong></p>
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://www.portalesdeluruguay.com.uy">Portales del Uruguay</a></p>
-                  </div>
-                </div>
-
-                <div role="tabpanel" class="tab-pane fade" id="wafer">
-                  <div class="tab-inner">
-                    <p class="lead"> Fusce erat libero, fermentum quis sollicitudin id, venenatis nec felis. Morbi sollicitudin gravida finibus.</p>
-                    <hr>
-                    <p><strong class="text-uppercase">Wafer Baby</strong></p>
-                    <p><em class="text-capitalize"> Web designer</em> at <a href="#">Microsoft</a></p>
                   </div>
                 </div>
               </div>
