--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -376,12 +376,6 @@
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
-                <li role="presentation" class="">
-                  <a href="#wafer" aria-controls="wafer" role="tab" data-toggle="tab">
-                    <img class="img-circle wafer" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
-                    <span class="quote"><i class="fa fa-quote-left"></i></span>
-                  </a>
-                </li>
               </ul>
             </div>
             <div class="col-xs-8 col-sm-12">
@@ -389,7 +383,7 @@
               <div class="tab-content" id="tabs-collapse">
                 <div role="tabpanel" class="tab-pane fade" id="julio-fitipaldo">
                   <div class="tab-inner">
-                    <p class="lead">They have proven to have a strong technical team that<br/> supports its activities, generating high quality projects.</p>
+                    <p class="lead">They have proven to have a strong technical team that<br/> supports its activities, <strong>generating high quality projects</strong>.</p>
                     <hr>
                     <p><strong class="text-uppercase">Julio Fitipaldo</strong></p>
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://nublit.com">Nublit</a></p>
@@ -398,7 +392,7 @@
 
                 <div role="tabpanel" class="tab-pane fade" id="matias-reina">
                   <div class="tab-inner">
-                    <p class="lead">Lorem ipsum.<br/> Lorem ipsum.</p>
+                    <p class="lead">Excellent support provided by <strong>true cloud experts</strong>.</p>
                     <hr>
                     <p><strong class="text-uppercase">Matías Reina</strong></p>
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://www.abstracta.us">Abstracta</a></p>
@@ -407,19 +401,10 @@
 
                 <div role="tabpanel" class="tab-pane fade in active" id="portales-del-uruguay">
                   <div class="tab-inner">
-                    <p class="lead">devopX team has helped us to reduce our cloud bill by 60% and increased our uptime during peak traffic periods.</p>
+                    <p class="lead">devopX team has helped us to <strong>reduce our cloud bill by 60%</strong> and increased our uptime during peak traffic periods.</p>
                     <hr>
                     <p><strong class="text-uppercase">Nicolás Bottaioli</strong></p>
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://www.portalesdeluruguay.com.uy">Portales del Uruguay</a></p>
-                  </div>
-                </div>
-
-                <div role="tabpanel" class="tab-pane fade" id="wafer">
-                  <div class="tab-inner">
-                    <p class="lead"> Fusce erat libero, fermentum quis sollicitudin id, venenatis nec felis. Morbi sollicitudin gravida finibus.</p>
-                    <hr>
-                    <p><strong class="text-uppercase">Wafer Baby</strong></p>
-                    <p><em class="text-capitalize"> Web designer</em> at <a href="#">Microsoft</a></p>
                   </div>
                 </div>
               </div>
