[MOD] Mark Matias story as default

--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -383,13 +383,13 @@
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
-                <li role="presentation" class="">
+                <li role="presentation" class="active">
                   <a href="#matias-reina" aria-controls="matias-reina" role="tab" data-toggle="tab">
                     <img class="img-circle matias-reina" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
-                <li role="presentation" class="active">
+                <li role="presentation" class="">
                   <a href="#portales-del-uruguay" aria-controls="portales-del-uruguay" role="tab" data-toggle="tab">
                     <img class="img-circle portales-del-uruguay" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
@@ -409,7 +409,7 @@
                   </div>
                 </div>
 
-                <div role="tabpanel" class="tab-pane fade" id="matias-reina">
+                <div role="tabpanel" class="tab-pane fade in active" id="matias-reina">
                   <div class="tab-inner">
                     <p class="lead">Excelente soporte brindado por <strong>verdaderos expertos en cloud</strong>.</p>
                     <hr>
@@ -418,7 +418,7 @@
                   </div>
                 </div>
 
-                <div role="tabpanel" class="tab-pane fade in active" id="portales-del-uruguay">
+                <div role="tabpanel" class="tab-pane fade" id="portales-del-uruguay">
                   <div class="tab-inner">
                     <p class="lead">devopX nos ayudó a <strong>reducir nuestra factura de servidores en un 60%</strong> y aumento nuestro uptime durante periodos de alta demanda.</p>
                     <hr>
