--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -475,7 +475,7 @@
             <ul class="social-links">
               <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook-square"></i></a></li>
               <li class="twitter"><a target="_blank" href="https://twitter.com/devopxteam"><i class="fa fa-twitter"></i></a></li>
-              <li class="googleplus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
+              <li class=""><a target="_blank" href="https://github.com/devopxteam"><i class="fa fa-github"></i></a></li>
               <li class="linkedin"><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
               <li class="youtube"><a target="_blank" href="#"><i class="fa fa-youtube"></i></a></li>
             </ul>
