--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -35,7 +35,7 @@
   <meta name="msapplication-square310x310logo" content="/mstile-310x310.png" />
 
   <!-- Web Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Cuprum:400,500|Expletus+Sans:400,500|Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cuprum:400,500|Expletus+Sans:400,500|Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
   <!-- Bootstrap core CSS -->
   <link href="/assets/themes/devopx/bootstrap/css/bootstrap.min.css" rel="stylesheet">
