[MOD] Debug contact form in FF and Safari

--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -551,7 +551,7 @@
 <script type="text/javascript" src="/assets/themes/devopx/js/template.min.js" async></script>
 
 <!-- Custom Scripts -->
-<script type="text/javascript" src="/assets/themes/devopx/js/custom.min.js"></script>
+<script type="text/javascript" src="/assets/themes/devopx/js/custom.js"></script>
 
 </body>
 </html>
