--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -485,7 +485,7 @@
           <div class="footer-content">
             <div class="alert alert-success fade in" id="successFormSubmit" role="alert" style="display: none;"><i class="fa fa-check"></i> Your message was sent successfully. We'll get back to you right away!</div>
             <div class="alert alert-danger fade in" id="errorFormSubmit" role="alert" style="display: none;"><i class="fa fa-exclamation-circle"></i> We couldn't get your message. Please try again.</div>
-            <form role="form" id="footer-form">
+            <form role="form" id="footer-form" action="#" enctype="application/x-www-form-urlencoded">
               <div class="form-group has-feedback">
                 <label class="sr-only" for="name">Name</label>
                 <input type="text" class="form-control" id="name" placeholder="Name" name="name" required>
