[ADD] Copy form config from en/default.html

--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -485,7 +485,7 @@
           <div class="footer-content">
             <div class="alert alert-success fade in" id="successFormSubmit" role="alert" style="display: none;"><i class="fa fa-check"></i> Su mensaje ha sido enviado satisfactoriamente. Nos pondremos en contacto con usted lo antes posible.</div>
             <div class="alert alert-danger fade in" id="errorFormSubmit" role="alert" style="display: none;"><i class="fa fa-exclamation-circle"></i> No hemos podido recibir su mensaje. Por favor intente nuevamente.</div>
-            <form role="form" id="footer-form">
+            <form role="form" id="footer-form" action="#" enctype="application/x-www-form-urlencoded">
               <div class="form-group has-feedback">
                 <label class="sr-only" for="name">Nombre</label>
                 <input type="text" class="form-control" id="name" placeholder="Nombre" name="name" required>
