[MOD] Change website description

--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>devopX - Cloud experts</title>
-  <meta name="description" content="devopX - Your DevOps team">
+  <meta name="description" content="devopX - Cloud experts">
   <meta name="author" content="devopx.com">
 
   <!-- Mobile Meta -->
