--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>devopX - Expertos en cloud</title>
-  <meta name="description" content="devopX - Your DevOps team">
+  <meta name="description" content="devopX - Expertos en cloud">
   <meta name="author" content="devopx.com">
 
   <!-- Mobile Meta -->
