[ADD] Add Google Analytics in the layouts

--- a/_layouts/en/default.html
+++ b/_layouts/en/default.html
@@ -4,3 +4,5 @@ theme :
 ---
 {% include JB/setup %}
 {% include themes/devopx/en/default.html %}
+{% include JB/analytics %}
+{% include themes/devopx/end.html %}
