--- a/_layouts/es/default.html
+++ b/_layouts/es/default.html
@@ -4,3 +4,5 @@ theme :
 ---
 {% include JB/setup %}
 {% include themes/devopx/es/default.html %}
+{% include JB/analytics %}
+{% include themes/devopx/end.html %}
