--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -519,7 +519,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="text-center">Copyright © 2015. devopX | All rights reserved.</p>
+          <p class="text-center">Copyright © <span id="year"></span>. devopX | All rights reserved.</p>
         </div>
       </div>
     </div>
