[MOD] Add Christian Reinhard success story

--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -378,14 +378,14 @@
               <!-- Nav tabs -->
               <ul class="nav nav-justified" id="nav-tabs" role="tablist">
                 <li role="presentation" class="">
-                  <a href="#julio-fitipaldo" aria-controls="julio-fitipaldo" role="tab" data-toggle="tab">
-                    <img class="img-circle julio-fitipaldo" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                  <a href="#matias-reina" aria-controls="matias-reina" role="tab" data-toggle="tab">
+                    <img class="img-circle matias-reina" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
                 <li role="presentation" class="active">
-                  <a href="#matias-reina" aria-controls="matias-reina" role="tab" data-toggle="tab">
-                    <img class="img-circle matias-reina" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                  <a href="#christian-reinhard" aria-controls="christian-reinhard" role="tab" data-toggle="tab">
+                    <img class="img-circle christian-reinhard" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
@@ -400,16 +400,7 @@
             <div class="col-xs-8 col-sm-12">
               <!-- Tab panes -->
               <div class="tab-content" id="tabs-collapse">
-                <div role="tabpanel" class="tab-pane fade" id="julio-fitipaldo">
-                  <div class="tab-inner">
-                    <p class="lead">They have proven to have a strong technical team that<br/> supports its activities, <strong>generating high quality projects</strong>.</p>
-                    <hr>
-                    <p><strong class="text-uppercase">Julio Fitipaldo</strong></p>
-                    <p><em class="text-capitalize"> CEO</em> at <a href="http://nublit.com">Nublit</a></p>
-                  </div>
-                </div>
-
-                <div role="tabpanel" class="tab-pane fade in active" id="matias-reina">
+                <div role="tabpanel" class="tab-pane fade" id="matias-reina">
                   <div class="tab-inner">
                     <p class="lead">Excellent support provided by <strong>true cloud experts</strong>.</p>
                     <hr>
@@ -417,7 +408,14 @@
                     <p><em class="text-capitalize"> CEO</em> at <a href="http://www.abstracta.us">Abstracta</a></p>
                   </div>
                 </div>
-
+                <div role="tabpanel" class="tab-pane fade in active" id="christian-reinhard">
+                  <div class="tab-inner">
+                    <p class="lead">devopX helped us to move to AWS and implement DevOps methodologies, since then, <strong>our uptime has been 100%</strong> and <strong>our devs can now focus in delivering new features instead of fixing servers</strong>.</p>
+                    <hr>
+                    <p><strong class="text-uppercase">Christian Reinhard</strong></p>
+                    <p><em class="text-capitalize"> CTO</em> at <a href="http://wondersign.com">Wondersign</a></p>
+                  </div>
+                </div>
                 <div role="tabpanel" class="tab-pane fade" id="portales-del-uruguay">
                   <div class="tab-inner">
                     <p class="lead">devopX team has helped us to <strong>reduce our cloud bill by 60%</strong> and increased our uptime during peak traffic periods.</p>
