--- a/assets/themes/devopx/css/custom.css
+++ b/assets/themes/devopx/css/custom.css
@@ -142,11 +142,11 @@ body:before {
     background-size: cover;
   }
 
-  .julio-fitipaldo {
+  .christian-reinhard {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_45.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/christian-reinhard_45.jpg') no-repeat;
     width: 45px;
     height: 45px;
   }
@@ -206,11 +206,11 @@ body:before {
     background-size: cover;
   }
 
-  .julio-fitipaldo {
+  .christian-reinhard {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_45.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/christian-reinhard_45.jpg') no-repeat;
     width: 45px;
     height: 45px;
   }
@@ -270,11 +270,11 @@ body:before {
     background-size: cover;
   }
 
-  .julio-fitipaldo {
+  .christian-reinhard {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/christian-reinhard_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
@@ -334,11 +334,11 @@ body:before {
     background-size: cover;
   }
 
-  .julio-fitipaldo {
+  .christian-reinhard {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/christian-reinhard_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
@@ -398,11 +398,11 @@ body:before {
     background-size: cover;
   }
 
-  .julio-fitipaldo {
+  .christian-reinhard {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/christian-reinhard_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
@@ -462,11 +462,11 @@ body:before {
     background-size: cover;
   }
 
-  .julio-fitipaldo {
+  .christian-reinhard {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/julio-fitipaldo_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/christian-reinhard_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
