[MOD] Change address

--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -467,8 +467,8 @@
           <div class="footer-content">
             <p class="large">Drop us a line. We will get back to you in less than 60 minutes!</p>
             <ul class="list-icons">
-              <li><i class="fa fa-map-marker pr-10"></i> Carlos Quijano 1177, Montevideo 11200, Uruguay</li>
-              <li><i class="fa fa-envelope-o pr-10"></i> info@devopx.com</li>
+              <li><i class="fa fa-map-marker pr-10"></i> Montevideo, Uruguay</li>
+              <li><i class="fa fa-envelope-o pr-10"></i> info <AT> devopx.com</li>
             </ul>
             <ul class="social-links">
               <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook-square"></i></a></li>
