[MOD] Remove async on JavaScript resources

--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -543,10 +543,10 @@
 <script type="text/javascript" src="/assets/themes/devopx/plugins/modernizr.js"></script>
 
 <!-- Appear javascript -->
-<script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.appear.min.js" async></script>
+<script type="text/javascript" src="/assets/themes/devopx/plugins/jquery.appear.min.js"></script>
 
 <!-- Initialization of Plugins -->
-<script type="text/javascript" src="/assets/themes/devopx/js/template.min.js" async></script>
+<script type="text/javascript" src="/assets/themes/devopx/js/template.min.js"></script>
 
 <!-- Custom Scripts -->
 <script type="text/javascript" src="/assets/themes/devopx/js/custom.js"></script>
