[MOD] Change customer success story to add Erik Marum quote

--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -390,8 +390,8 @@
                   </a>
                 </li>
                 <li role="presentation" class="">
-                  <a href="#portales-del-uruguay" aria-controls="portales-del-uruguay" role="tab" data-toggle="tab">
-                    <img class="img-circle portales-del-uruguay" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
+                  <a href="#erik-marum" aria-controls="erik-marum" role="tab" data-toggle="tab">
+                    <img class="img-circle erik-marum" width="1" height="1" src="/assets/themes/devopx/images/NFFFFFF-0.png" />
                     <span class="quote"><i class="fa fa-quote-left"></i></span>
                   </a>
                 </li>
@@ -416,12 +416,12 @@
                     <p><em class="text-capitalize"> CTO</em> at <a href="http://wondersign.com">Wondersign</a></p>
                   </div>
                 </div>
-                <div role="tabpanel" class="tab-pane fade" id="portales-del-uruguay">
+                <div role="tabpanel" class="tab-pane fade" id="erik-marum">
                   <div class="tab-inner">
-                    <p class="lead">devopX nos ayudó a <strong>reducir nuestra factura de servidores en un 60%</strong> y aumento nuestro uptime durante periodos de alta demanda.</p>
+                    <p class="lead">El equipo de devopX nos ayudo a migrar nuestra plataforma a AWS, <strong>obteniendo un 50% de ahorro en costos de infrastructura</strong>, y teniendo <strong>una plataforma escalable y disponible 24/7</strong>.</p>
                     <hr>
-                    <p><strong class="text-uppercase">Nicolás Bottaioli</strong></p>
-                    <p><em class="text-capitalize"> CEO</em> at <a href="http://www.portalesdeluruguay.com.uy">Portales del Uruguay</a></p>
+                    <p><strong class="text-uppercase">Erik Marum</strong></p>
+                    <p><em class="text-capitalize"> CTO</em> at <a href="http://bigstar.tv">Bigstar TV</a></p>
                   </div>
                 </div>
               </div>
