--- a/assets/themes/devopx/css/custom.css
+++ b/assets/themes/devopx/css/custom.css
@@ -160,11 +160,11 @@ body:before {
     height: 45px;
   }
 
-  .portales-del-uruguay {
+  .erik-marum {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_45.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/erik-marum_45.jpg') no-repeat;
     width: 45px;
     height: 45px;
   }
@@ -224,11 +224,11 @@ body:before {
     height: 45px;
   }
 
-  .portales-del-uruguay {
+  .erik-marum {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_45.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/erik-marum_45.jpg') no-repeat;
     width: 45px;
     height: 45px;
   }
@@ -288,11 +288,11 @@ body:before {
     height: 150px;
   }
 
-  .portales-del-uruguay {
+  .erik-marum {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/erik-marum_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
@@ -352,11 +352,11 @@ body:before {
     height: 150px;
   }
 
-  .portales-del-uruguay {
+  .erik-marum {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/erik-marum_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
@@ -416,11 +416,11 @@ body:before {
     height: 150px;
   }
 
-  .portales-del-uruguay {
+  .erik-marum {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/erik-marum_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
@@ -480,11 +480,11 @@ body:before {
     height: 150px;
   }
 
-  .portales-del-uruguay {
+  .erik-marum {
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: url('/assets/themes/devopx/images/customers/portales-del-uruguay_150.jpg') no-repeat;
+    background: url('/assets/themes/devopx/images/customers/erik-marum_150.jpg') no-repeat;
     width: 150px;
     height: 150px;
   }
