fix: Change contact form to Hubspot

--- a/_includes/themes/devopx/es/default.html
+++ b/_includes/themes/devopx/es/default.html
@@ -481,26 +481,14 @@
         </div>
         <div class="col-sm-6">
           <div class="footer-content">
-            <div class="alert alert-success fade in" id="successFormSubmit" role="alert" style="display: none;"><i class="fa fa-check"></i> Su mensaje ha sido enviado satisfactoriamente. Nos pondremos en contacto con usted lo antes posible.</div>
-            <div class="alert alert-danger fade in" id="errorFormSubmit" role="alert" style="display: none;"><i class="fa fa-exclamation-circle"></i> No hemos podido recibir su mensaje. Por favor intente nuevamente.</div>
-            <form role="form" id="footer-form" action="#" enctype="application/x-www-form-urlencoded">
-              <div class="form-group has-feedback">
-                <label class="sr-only" for="name">Nombre</label>
-                <input type="text" class="form-control" id="name" placeholder="Nombre" name="name" required>
-                <i class="fa fa-user form-control-feedback"></i>
-              </div>
-              <div class="form-group has-feedback">
-                <label class="sr-only" for="email">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Correo electrónico" name="email" required>
-                <i class="fa fa-envelope form-control-feedback"></i>
-              </div>
-              <div class="form-group has-feedback">
-                <label class="sr-only" for="message">Mensaje</label>
-                <textarea class="form-control" rows="8" id="message" placeholder="Mensaje" name="message" required></textarea>
-                <i class="fa fa-pencil form-control-feedback"></i>
-              </div>
-              <input type="submit" id="submit" value="Enviar" class="btn btn-default center-block">
-            </form>
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+            <script>
+              hbspt.forms.create({
+              region: "na1",
+              portalId: "20903707",
+              formId: "633c1b30-3f49-45e6-a4cc-b3b320d5ca83"
+            });
+            </script>
           </div>
         </div>
       </div>
