--- a/_includes/themes/devopx/en/default.html
+++ b/_includes/themes/devopx/en/default.html
@@ -481,26 +481,14 @@
         </div>
         <div class="col-sm-6">
           <div class="footer-content">
-            <div class="alert alert-success fade in" id="successFormSubmit" role="alert" style="display: none;"><i class="fa fa-check"></i> Your message was sent successfully. We'll get back to you right away!</div>
-            <div class="alert alert-danger fade in" id="errorFormSubmit" role="alert" style="display: none;"><i class="fa fa-exclamation-circle"></i> We couldn't get your message. Please try again.</div>
-            <form role="form" id="footer-form" action="#" enctype="application/x-www-form-urlencoded">
-              <div class="form-group has-feedback">
-                <label class="sr-only" for="name">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Name" name="name" required>
-                <i class="fa fa-user form-control-feedback"></i>
-              </div>
-              <div class="form-group has-feedback">
-                <label class="sr-only" for="email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-                <i class="fa fa-envelope form-control-feedback"></i>
-              </div>
-              <div class="form-group has-feedback">
-                <label class="sr-only" for="message">Message</label>
-                <textarea class="form-control" rows="8" id="message" placeholder="Message" name="message" required></textarea>
-                <i class="fa fa-pencil form-control-feedback"></i>
-              </div>
-              <input type="submit" id="submit" value="Send" class="btn btn-default center-block">
-            </form>
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+            <script>
+              hbspt.forms.create({
+              region: "na1",
+              portalId: "20903707",
+              formId: "8e80ee82-a1cf-4b21-be0a-57f481bd9423"
+            });
+            </script>
           </div>
         </div>
       </div>
